Fixed white-space nowrap issue in header and table and media queries

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -63,10 +63,11 @@ header {
 	h1 {
 		font-size: 2.2rem;
 		color: $color-1;
+		white-space: nowrap;
 	}
 
 	h3 {
-		margin-top: -150px;
+		margin-top: -130px;
 		font-size: 2rem;
 		color: rgba($color-2, .8);
 		font-style: italic;
@@ -78,6 +79,10 @@ header {
 
 		h1 {
 			font-size: 3rem;
+		}
+
+		h3 {
+			margin-top: -150px;
 		}
 	}
 }
@@ -588,7 +593,13 @@ table {
 
 	th {
 		font-weight: bold;
-		white-space: nowrap;
+		white-space: normal;
+	}
+
+	@include MQ(M) {
+		th {
+			white-space: nowrap;
+		}
 	}
 }
 
